# phaml

./: CMakeLists.txt  README  mkmkfile.sh  spkg-install
doc/: AUXILLARY  HINTS  KNOWN_PROBLEMS  LICENSE  QUICKSTART
examples/: CMakeLists.txt
examples/L-domain/: master.f90  pde.f90  spmd.f90
examples/all/: master.f90  mkmkfile.sh  pde.f90  spmd.f90  usermod.f90
examples/bdf2/: README.bdf2  master.f90  pde.f90  spmd.f90  usermod.f90
examples/curved/: master.f90  mkmkfile.sh  pde.f90  spmd.f90
examples/domains/: master.f90  mkmkfile.sh  pde.f90  spmd.f90
examples/eigenvalue/: master.f90  pde.f90  spmd.f90  usermod.f90
examples/elliptic/: CMakeLists.txt  master.f90  pde.f90  spmd.f90  usermod.f90
examples/irk4/: README.irk4  master.f90  pde.f90  spmd.f90  usermod.f90
examples/nonlinear/: master.f90  pde.f90  spmd.f90
phaml/: CMakeLists.txt
src/: CMakeLists.txt  arpack.dum.f  basis.f90  blopex_c.dum.f90  blopex_c.petsc.1.0.c  blopex_c.petsc.1.1.c  boundary_util3D.f90  calgo582.f  dmnfb.f  eigen.f90  errest.f90  evaluate.f90  global.f90  graphics.dum.f90  graphics.f90  graphics3D.f90  graphmain.f90  grid_init.f90  grid_init3D.f90  grid_io.f90  grid_util.f90  grid_util3D.f90  gridtype.f90  gridtype3D.f90  hash1.f90  hash2.f90  hash2.f90.nopgibug  hashext1.f90  hashext2.f90  hbmg.f90  hp_strategies.f90  hypre_fix.c  hypre_interf.dum.f90  hypre_interf.f90  hypretype.dum.f90  hypretype.f90  krylov.f90  lapack_solve.f90  laplace_elemental_matrix.f90  linsys.f90  (+53 more)
testdir/: mkmkfile.sh  run_tests.sh
testdir3D/: mkmkfile.sh  run_tests.sh
(+853 files in other folders)
